// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup renders should RadioGroup renders 1`] = `
<DocumentFragment>
  <section
    class="radioGroupContainer"
  >
    <div>
      <label
        class="label required"
      >
        I plan to use this solution for my business, rather than academic or personal needs
      </label>
      <section
        class="wrapperComponent"
        data-testid="popup"
        role="presentation"
        tabindex="1"
      >
        <div
          class="targetElement"
        >
          <div
            class="iconWrapper"
            data-testid="targetDiv"
          >
            <div
              class="icon"
            >
              i
            </div>
          </div>
        </div>
      </section>
    </div>
    <div
      class="radioContainer"
    >
      <section
        class="radioInputContainer"
      >
        <label
          class="label"
          for="formId-Yes"
        >
          <input
            checked=""
            class="input"
            id="formId-Yes"
            name="commercialUsage"
            selectedvalue="Yes"
            type="radio"
            value="Yes"
          />
          <span
            class="radioInput"
          />
          Yes
        </label>
      </section>
      <section
        class="radioInputContainer"
      >
        <label
          class="label"
          for="formId-No"
        >
          <input
            class="input"
            id="formId-No"
            name="commercialUsage"
            selectedvalue="Yes"
            type="radio"
            value="No"
          />
          <span
            class="radioInput"
          />
          No
        </label>
      </section>
    </div>
    <span
      class="small_forms"
      other=""
    />
  </section>
</DocumentFragment>
`;

exports[`RadioGroup renders should RadioGroup with selected value "No" renders 1`] = `
<DocumentFragment>
  <section
    class="radioGroupContainer"
  >
    <div>
      <label
        class="label required"
      >
        I plan to use this solution for my business, rather than academic or personal needs
      </label>
      <section
        class="wrapperComponent"
        data-testid="popup"
        role="presentation"
        tabindex="1"
      >
        <div
          class="targetElement"
        >
          <div
            class="iconWrapper"
            data-testid="targetDiv"
          >
            <div
              class="icon"
            >
              i
            </div>
          </div>
        </div>
      </section>
    </div>
    <div
      class="radioContainer"
    >
      <section
        class="radioInputContainer"
      >
        <label
          class="label"
          for="formId-Yes"
        >
          <input
            class="input"
            id="formId-Yes"
            name="commercialUsage"
            selectedvalue="No"
            type="radio"
            value="Yes"
          />
          <span
            class="radioInput"
          />
          Yes
        </label>
      </section>
      <section
        class="radioInputContainer"
      >
        <label
          class="label"
          for="formId-No"
        >
          <input
            checked=""
            class="input"
            id="formId-No"
            name="commercialUsage"
            selectedvalue="No"
            type="radio"
            value="No"
          />
          <span
            class="radioInput"
          />
          No
        </label>
      </section>
    </div>
    <div
      class="label checkedNoLabel"
    >
      <div
        class="iconWrapper"
      >
        <div
          class="icon"
        >
          !
        </div>
      </div>
      <span>
        Please note: if you leave this solution for commercial use, you will receive support from EPAM.
      </span>
    </div>
    <span
      class="small_forms"
      other=""
    />
  </section>
</DocumentFragment>
`;
